--- a/competitors.html
+++ b/competitors.html
@@ -134,7 +134,7 @@
 
 
                         <li class="nav-item position-relative">
-                            <a class="nav-link dropdownMenu-link">About <img src="assets/images/arro.svg" alt=""
+                            <a class="nav-link dropdownMenu-link">More <img src="assets/images/arro.svg" alt=""
                                     class="arrow-icon"></a>
                             <div class="dropdownMenu dropdownMenu2 bg-white shadow-sm">
                                 <div class="mb-2">
