--- a/demo-details.html
+++ b/demo-details.html
@@ -243,200 +243,30 @@
         <section class="py-lg-5 py-4">
             <div class="container">
                 <div class="row align-items-center mb-lg-5 mb-4">
-                    <div class="col-xl-10 col-lg-10  hero-text mx-auto text-center">
+                    <div class="col-xl-12 col-lg-12  hero-text mx-auto text-center">
                         <h2 class="services-title">
-                            BLOG & DEMOS
+                            Introduction to Mergeasy
                         </h2>
-                        <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
+                        <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0 mb-3">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi nobis. E
+                            </p>
+                        <video class="banner-video-b border shadow rounded-2 my-3" controls autoplay loop >
+                            <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
+                            Your browser does not support the video tag.
+                        </video>
+                        <p class="hero-text pe-lg-3 mt-3 mb-0 pb-0">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Itaque, modi nobis. Exercitationem
                             commodi, ex natus aperiam ea fuga, quisquam labore ut quis, omnis numquam. Sunt vero totam
-                            culpa quam consectetur!
+                            culpa quam consectetur! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro sint cupiditate fuga error provident. Odio quod provident nemo deserunt voluptates explicabo eius praesentium, nobis assumenda officiis enim atque repudiandae velit!
+                            </p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
-                            <div class="demo-video-image position-relative">
-                                <a href="demo-details.html" class="about-video">
-                                    <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                                    <div class="play-icon">
-                                        <i class="bi bi-play-fill"></i>
-                                    </div>
-                                </a>
-                                </div>
-                               <div class="demo-text pt-3">
-                                <span class="issue-date">
-                                    Sep 26, 2024
-                                </span>
-                                <h2 class="demo-heading mt-2">
-                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam.
-                                </h2>
-                                <p class="demo-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos vel earum explicabo sed cum suscipit debitis sit neque voluptate. Amet neque repellendus est repudiandae similique omnis quidem dolorum praesentium cupiditate.
-                                </p>
-                                <a href="demo-details.html" class="demo-btn">Watch Now <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4.16663 10H15.8333M15.8333 10L9.99996 4.16667M15.8333 10L9.99996 15.8333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  </svg></a>
-                               </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
-                            <div class="demo-video-image position-relative">
-                                <a href="demo-details.html" class="about-video">
-                                    <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                                    <div class="play-icon">
-                                        <i class="bi bi-play-fill"></i>
-                                    </div>
-                                </a>
-                                </div>
-                               <div class="demo-text pt-3">
-                                <span class="issue-date">
-                                    Sep 26, 2024
-                                </span>
-                                <h2 class="demo-heading mt-2">
-                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam.
-                                </h2>
-                                <p class="demo-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos vel earum explicabo sed cum suscipit debitis sit neque voluptate. Amet neque repellendus est repudiandae similique omnis quidem dolorum praesentium cupiditate.
-                                </p>
-                                <a href="demo-details.html" class="demo-btn">Watch Now <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4.16663 10H15.8333M15.8333 10L9.99996 4.16667M15.8333 10L9.99996 15.8333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  </svg></a>
-                               </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
-                            <div class="demo-video-image position-relative">
-                                <a href="demo-details.html" class="about-video">
-                                    <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                                    <div class="play-icon">
-                                        <i class="bi bi-play-fill"></i>
-                                    </div>
-                                </a>
-                                </div>
-                               <div class="demo-text pt-3">
-                                <span class="issue-date">
-                                    Sep 26, 2024
-                                </span>
-                                <h2 class="demo-heading mt-2">
-                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam.
-                                </h2>
-                                <p class="demo-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos vel earum explicabo sed cum suscipit debitis sit neque voluptate. Amet neque repellendus est repudiandae similique omnis quidem dolorum praesentium cupiditate.
-                                </p>
-                                <a href="demo-details.html" class="demo-btn">Watch Now <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4.16663 10H15.8333M15.8333 10L9.99996 4.16667M15.8333 10L9.99996 15.8333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  </svg></a>
-                               </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
-                            <div class="demo-video-image position-relative">
-                                <a href="demo-details.html" class="about-video">
-                                    <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                                    <div class="play-icon">
-                                        <i class="bi bi-play-fill"></i>
-                                    </div>
-                                </a>
-                                </div>
-                               <div class="demo-text pt-3">
-                                <span class="issue-date">
-                                    Sep 26, 2024
-                                </span>
-                                <h2 class="demo-heading mt-2">
-                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam.
-                                </h2>
-                                <p class="demo-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos vel earum explicabo sed cum suscipit debitis sit neque voluptate. Amet neque repellendus est repudiandae similique omnis quidem dolorum praesentium cupiditate.
-                                </p>
-                                <a href="demo-details.html" class="demo-btn">Watch Now <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4.16663 10H15.8333M15.8333 10L9.99996 4.16667M15.8333 10L9.99996 15.8333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  </svg></a>
-                               </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
-                            <div class="demo-video-image position-relative">
-                                <a href="demo-details.html" class="about-video">
-                                    <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                                    <div class="play-icon">
-                                        <i class="bi bi-play-fill"></i>
-                                    </div>
-                                </a>
-                                </div>
-                               <div class="demo-text pt-3">
-                                <span class="issue-date">
-                                    Sep 26, 2024
-                                </span>
-                                <h2 class="demo-heading mt-2">
-                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam.
-                                </h2>
-                                <p class="demo-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos vel earum explicabo sed cum suscipit debitis sit neque voluptate. Amet neque repellendus est repudiandae similique omnis quidem dolorum praesentium cupiditate.
-                                </p>
-                                <a href="demo-details.html" class="demo-btn">Watch Now <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4.16663 10H15.8333M15.8333 10L9.99996 4.16667M15.8333 10L9.99996 15.8333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  </svg></a>
-                               </div>
-                        </div>
-                    </div>  
-                    <div class="col-lg-4 col-md-6 mb-3">
-                        <div class="demo-card shadow">
-                            <div class="demo-video-image position-relative">
-                                <a href="demo-details.html" class="about-video">
-                                    <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                                    <div class="play-icon">
-                                        <i class="bi bi-play-fill"></i>
-                                    </div>
-                                </a>
-                                </div>
-                               <div class="demo-text pt-3">
-                                <span class="issue-date">
-                                    Sep 26, 2024
-                                </span>
-                                <h2 class="demo-heading mt-2">
-                                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore, totam.
-                                </h2>
-                                <p class="demo-text">
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos vel earum explicabo sed cum suscipit debitis sit neque voluptate. Amet neque repellendus est repudiandae similique omnis quidem dolorum praesentium cupiditate.
-                                </p>
-                                <a href="demo-details.html" class="demo-btn">Watch Now <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M4.16663 10H15.8333M15.8333 10L9.99996 4.16667M15.8333 10L9.99996 15.8333" stroke="currentColor" stroke-width="1.66667" stroke-linecap="round" stroke-linejoin="round"></path>
-                                  </svg></a>
-                               </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-12 mt-5 d-flex justify-content-center">
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                              <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Previous">
-                                  <span aria-hidden="true">&laquo;</span>
-                                  <span class="sr-only">Previous</span>
-                                </a>
-                              </li>
-                              <li class="page-item"><a class="page-link" href="#">1</a></li>
-                              <li class="page-item"><a class="page-link" href="#">2</a></li>
-                              <li class="page-item"><a class="page-link" href="#">3</a></li>
-                              <li class="page-item">
-                                <a class="page-link" href="#" aria-label="Next">
-                                  <span aria-hidden="true">&raquo;</span>
-                                  <span class="sr-only">Next</span>
-                                </a>
-                              </li>
-                            </ul>
-                          </nav>
-                    </div>
-                </div>
+           
             </div>
         </section>
 
 
-        <section class="bg-light mt-3">
+        <section class="bg-light ">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
