--- a/chrome-extension.html
+++ b/chrome-extension.html
@@ -61,7 +61,7 @@
                                         </a>
                                     </div>
                                     <div class="ms-lg-4 ms-0 mb-3">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
@@ -86,7 +86,7 @@
                                         </a>
                                     </div>
                                     <div class="ms-lg-4 ms-0">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mobile-application.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-phone"></i></div>
                                                 <div class="ms-2">
@@ -100,7 +100,7 @@
                                 </div>
                                 <div>
                                     <div class="">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="chrome-extension.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
@@ -113,12 +113,23 @@
                                 </div>
                             </div>
                         </li>
-                       
+                        <!-- <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-bs-toggle="dropdown"
+                                aria-haspopup="true" aria-expanded="false">Products </a>
+                            <div class="dropdown-menu" aria-labelledby="dropdownId">
+                                <a class="dropdown-item" href="#">MergeSign</a>
+                                <a class="dropdown-item" href="#">MergeCall</a>
+                                <a class="dropdown-item" href="#">MergeMerge</a>
+                            </div>
+                        </li> -->
+                        <!-- <li class="nav-item">
+                            <a class="nav-link " href="#">Features</a>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="plan&pricing.html">Plan & Pricing</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://mergeasy.docs.apiary.io/">API Reference</a>
+                            <a class="nav-link" href="#">API Reference</a>
                         </li>
 
 
@@ -127,7 +138,7 @@
                                     class="arrow-icon"></a>
                             <div class="dropdownMenu dropdownMenu2 bg-white shadow-sm">
                                 <div class="mb-2">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="blog-and-demos.html" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-book"></i></div>
                                             <!-- Blog & Demos Icon -->
@@ -224,6 +235,7 @@
                                 </div>
                             </div>
                         </li>
+
                     </ul>
                     <div class="d-flex align-items-center justify-content-center flex-md-row flex-column">
                         <div class="mb-lg-0 mb-3">
