--- a/plan&pricing.html
+++ b/plan&pricing.html
@@ -61,7 +61,7 @@
                                         </a>
                                     </div>
                                     <div class="ms-lg-4 ms-0 mb-3">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mergsign.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-telephone"></i></div>
                                                 <div class="ms-2">
@@ -86,7 +86,7 @@
                                         </a>
                                     </div>
                                     <div class="ms-lg-4 ms-0">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="mobile-application.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-phone"></i></div>
                                                 <div class="ms-2">
@@ -100,7 +100,7 @@
                                 </div>
                                 <div>
                                     <div class="">
-                                        <a href="" class="text-decoration-none">
+                                        <a href="chrome-extension.html" class="text-decoration-none">
                                             <div class="dropdown-item d-flex align-items-center text-start">
                                                 <div class="nav-icon"><i class="bi bi-collection"></i></div>
                                                 <div class="ms-2">
@@ -138,7 +138,7 @@
                                     class="arrow-icon"></a>
                             <div class="dropdownMenu dropdownMenu2 bg-white shadow-sm">
                                 <div class="mb-2">
-                                    <a href="" class="text-decoration-none">
+                                    <a href="blog-and-demos.html" class="text-decoration-none">
                                         <div class="dropdown-item d-flex align-items-center text-start">
                                             <div class="nav-icon2"><i class="bi bi-book"></i></div>
                                             <!-- Blog & Demos Icon -->
