--- a/competitors.html
+++ b/competitors.html
@@ -252,7 +252,7 @@
 
     </header>
     <main>
-        <section class="pt-lg-5 pt-4">
+        <section class="pt-5">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-10 col-lg-12  hero-text mx-auto text-center">
@@ -269,7 +269,7 @@
                 </div>
             </div>
         </section>
-  <section class="py-lg-5 py-4" id="comparison">
+  <section class="py-5" id="comparison">
             <div class="container">
                 <div class="row">
                     <!-- <div class="col-lg-12 ">
