--- a/blog-and-demos.html
+++ b/blog-and-demos.html
@@ -252,7 +252,7 @@
 
     </header>
     <main>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center mb-lg-5 mb-4">
                     <div class="col-xl-10 col-lg-10  hero-text mx-auto text-center">
