--- a/demo-details.html
+++ b/demo-details.html
@@ -252,7 +252,7 @@
 
     </header>
     <main>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center mb-lg-5 mb-4">
                     <div class="col-xl-12 col-lg-12  hero-text mx-auto text-center">
