--- a/faq.html
+++ b/faq.html
@@ -252,7 +252,7 @@
 
     </header>
     <main>
-        <section class="pt-lg-5 pt-4">
+        <section class="pt-5 pt-4">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-10 col-lg-12  hero-text mx-auto text-center">
@@ -279,7 +279,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4">
+        <section class="py-5 py-4">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
