--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
     </header>
     <main>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row ">
                     <div class="col-xl-6 col-lg-7  hero-text">
@@ -273,10 +273,13 @@
                             Merg<span class="text-primary">Call</span> <span class="desc">(Calling).</span>
                         </h2>
 
-                        <p class="hero-text pe-lg-3 mt-2 mb-4">
+                        <p class="hero-text pe-lg-3 mt-2 mb-lg-4 mb-3">
                             Manage your documents, signatures, and communication seamlessly with our platform, plus
                             enjoy developer API access at no extra cost.
                         </p>
+                        <div class="d-lg-none d-block mt-2 mb-4">
+                            <img src="assets/images/hero-image.webp" alt="" class="img-fluid  rounded-1  ">
+                        </div>
                         <div class="d-flex align-items-center flex-sm-row flex-column">
                             <div class="hero-btn">
                                 <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
@@ -293,20 +296,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-5">
+                    <div class="col-xl-6 col-lg-5 d-lg-block d-none">
                         <img src="assets/images/hero-image.webp" alt="" class="img-fluid shadow rounded-1 mt-lg-4">
-                        <!-- <div class="banner-video">
-                            <img src="assets/images/video-frame.png" alt="video" class="img-fluid video-desktop">
-                            <video class="banner-video-b" controls autoplay loop>
-                                <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                        </div> -->
                     </div>
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 bg-light">
+        <section class="py-5 bg-light">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mb-3">
@@ -318,7 +314,7 @@
                             Streamline Your Workflows with Seamless Document and Communication Management.
                         </p>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4">
+                    <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-4">
                         <div class=" px-3 py-4 text-center merg-card">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
@@ -333,7 +329,7 @@
                             <a href="" class="btn-nav shadow-sm">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4">
+                    <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-4">
                         <div class=" px-3 py-4 text-center merg-card">
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
@@ -348,7 +344,7 @@
                             <a href="" class="btn-nav shadow-sm">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4">
+                    <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-4">
                         <div class="px-3 py-4 text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
@@ -366,7 +362,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-7 hero-text">
@@ -410,7 +406,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 bg-light">
+        <section class="py-5 bg-light">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mb-5">
@@ -482,7 +478,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 ">
@@ -605,7 +601,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4" id="Industries-sec">
+        <section class="py-5" id="Industries-sec">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
@@ -619,7 +615,7 @@
                             temporibus id fugiat quam voluptatum amet aperiam.
                         </p>
                     </div>
-                    <div class="col-lg-10 mx-auto mt-4">
+                    <div class="col-xl-10 col-lg-12 mx-auto mt-4">
                         <div class="tab">
                             <button class="tablinks" onclick="openCity(event, 'real-estate')" id="defaultOpen">Real
                                 Estate</button>
