--- a/mergeasy.html
+++ b/mergeasy.html
@@ -252,10 +252,11 @@
 
     </header>
     <main>
-        <section class="py-lg-5 py-4">
+      
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-xl-6 col-lg-7  hero-text">
+                    <div class="col-xl-6 col-lg-7  hero-text text-lg-start text-center">
 
                         <h2 class="services-title">
                             Automate and Merge Your Documents
@@ -267,9 +268,8 @@
                             Generating and digital signing of your docx or pdf documents with merged data has become
                             more easier!
                         </p>
-                        <div class="d-flex align-items-center flex-sm-row flex-column mt-4">
+                        <div class="d-lg-flex d-none align-items-center flex-sm-row flex-column mt-4">
                             <div class="hero-btn">
-                                <!-- <a href="" class="btn-primary animated-button">Start Free Trial</a> -->
                                 <a href="contact.php" class="animated-button1">
                                     <span></span>
                                     <span></span>
@@ -282,48 +282,58 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xl-6 col-lg-5 mx-auto  ">
-                        <!-- <img src="assets/images/hero-image.webp" alt="" class="img-fluid shadow rounded-1 mt-lg-4"> -->
-                        <!-- <div class="banner-video mx-auto d-flex justify-content-center ">
-                            <video class="banner-video-b border shadow rounded-2" controls autoplay loop >
-                                <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>
-                        </div> -->
+                    <div class="col-xl-6 col-lg-5 mx-auto mt-lg-0 mt-3 ">
                         <button class="about-video bg-transparent border-0 position-relative p-0" data-bs-toggle="modal"
-                            data-bs-target="#exampleModal">
-                            <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
-                            <div class="play-icon">
-                                <i class="bi bi-play-fill"></i>
-                            </div>
-                        </button>
-                        <!-- Modal -->
-                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                            aria-hidden="true">
-                            <div class="modal-dialog modal-dialog-centered modal-lg p-0">
-                                <div class="modal-content p-0 bg-transparent border-0">
-                                    <div class="modal-header">
-                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                            aria-label="Close">
-                                            <i class="bi bi-x-circle"></i>
-                                        </button>
-                                    </div>
-                                    <div class="modal-body p-0">
-                                        <video class="banner-video-b border shadow rounded-2" controls  loop >
-                                            <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
-                                            Your browser does not support the video tag.
-                                        </video>
-                                        <!-- <iframe class="w-100" style="height:400px;" frameborder="0" allowfullscreen=""
-                                            src="https://www.youtube.com/embed/1MTkZPys7mU?feature=oembed?playlist=1MTkZPys7mU&amp;mute=0&amp;autoplay=0&amp;loop=no&amp;controls=0&amp;start=0&amp;end="></iframe> -->
-                                    </div>
+                        data-bs-target="#exampleModal">
+                        <img src="assets/images/hero-image.webp" alt="" class="img-fluid rounded-2">
+                        <div class="play-icon">
+                            <i class="bi bi-play-fill"></i>
+                        </div>
+                    </button>
+                    <!-- Modal -->
+                    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                        aria-hidden="true">
+                        <div class="modal-dialog modal-dialog-centered modal-lg p-0">
+                            <div class="modal-content p-0 bg-transparent border-0">
+                                <div class="modal-header">
+                                    <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                        aria-label="Close">
+                                        <i class="bi bi-x-circle"></i>
+                                    </button>
+                                </div>
+                                <div class="modal-body p-0">
+                                    <video class="banner-video-b border shadow rounded-2" controls  loop >
+                                        <source src="https://mergeasy.com/dist/images/video.mp4" type="video/mp4">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                    <!-- <iframe class="w-100" style="height:400px;" frameborder="0" allowfullscreen=""
+                                        src="https://www.youtube.com/embed/1MTkZPys7mU?feature=oembed?playlist=1MTkZPys7mU&amp;mute=0&amp;autoplay=0&amp;loop=no&amp;controls=0&amp;start=0&amp;end="></iframe> -->
                                 </div>
                             </div>
                         </div>
                     </div>
+                    </div>
+                    <div class="col-lg-12">
+                        <div class="d-lg-none d-flex align-items-center flex-sm-row flex-column justify-content-center mt-4">
+                            <div class="hero-btn me-sm-3">
+                                <a href="contact.php" class="animated-button1 w-100">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    Request For demo</a>
+                            </div>
+                            <div class="hero-btn">
+                                <a href="" class="secondry-button w-100">Get Started</a>
+                            </div>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 bg-light">
+
+        <section class="py-5 bg-light">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mb-5">
@@ -335,7 +345,7 @@
                             Populate documents with ease
                         </p>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-5">
+                    <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-5">
                         <div
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">01</div>
@@ -352,7 +362,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 mb-lg-0 mb-5">
+                    <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-5">
                         <div
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">02</div>
@@ -372,7 +382,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-4 mb-lg-0 mb-5">
+                    <div class="col-lg-4 col-md-6 mx-auto mb-lg-0 mb-5">
                         <div
                             class="bg-white shadow-sm px-3 pb-4 pt-5 text-center merg-card position-relative z-1 h-100">
                             <div class="step-number shadow-sm">03</div>
@@ -396,7 +406,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-10  hero-text text-center mx-auto">
@@ -422,7 +432,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 bg-light">
+        <section class="py-5 bg-light">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12 mb-3">
@@ -434,8 +444,8 @@
                             Most popular features that we are providing
                         </p>
                     </div>
-                    <div class="col-lg-3 mb-lg-0 mb-4">
-                        <div class=" px-3 py-4 text-center merg-card">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
@@ -450,8 +460,8 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-3 mb-lg-0 mb-4">
-                        <div class="px-3 py-4 text-center merg-card">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -467,8 +477,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-3 mb-lg-0 mb-4">
-                        <div class="px-3 py-4 text-center merg-card">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -483,8 +493,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-3 mb-lg-0 mb-4">
-                        <div class=" px-3 py-4 text-center merg-card">
+                    <div class="col-lg-3 col-md-6 mb-lg-0 mb-4">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
@@ -501,7 +511,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 ">
+        <section class="py-5 ">
             <div class="container">
                 <div class="row border-bottom">
                     <div class="col-lg-12 mb-3 text-center">
@@ -513,8 +523,8 @@
                             You can create any document with ease
                         </p>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4 bg-light">
-                        <div class=" px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
@@ -530,8 +540,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4">
-                        <div class="px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -548,8 +558,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4 bg-light">
-                        <div class="px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -566,8 +576,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4">
-                        <div class=" px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
@@ -583,8 +593,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4 bg-light">
-                        <div class="px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -602,8 +612,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4">
-                        <div class=" px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeCall</h3>
                             <h4 class="text-dark">(Integrated Calling)</h4> -->
                             <div class="my-3">
@@ -619,8 +629,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4 bg-light">
-                        <div class=" px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class="  text-center merg-card">
                             <!-- <h3>MergeSign </h3>
                             <h4 class="text-dark">(eSignatures)</h4> -->
                             <div class="my-3">
@@ -636,8 +646,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4">
-                        <div class="px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -653,8 +663,8 @@
                             </p>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-lg-0 mb-4 bg-light">
-                        <div class="px-3 py-4 text-center merg-card">
+                    <div class="col-lg-4 col-md-6 mb-lg-0 mb-4 bg-light">
+                        <div class=" text-center merg-card">
                             <!-- <h3>MergeMerge</h3>
                             <h4 class="text-dark">(Document Merging)</h4> -->
                             <div class="my-3">
@@ -675,16 +685,20 @@
             </div>
         </section>
 
-        <section class="py-lg-5 py-4 ">
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6">
+                    <div class="col-lg-6  text-lg-start text-center">
                         <span class="title">Frequently Asked Questions
                         </span>
                         <h2 class="main-heading text-black mt-1">
                           MergDoc FAQs
                         </h2>
-                        <div class="faq-list p-0 mt-3">
+                        <div class="d-lg-none d-flex justify-content-center">
+                            <img src="assets/images/Questions-pana.png" alt="" class="img-fluid" style="max-width: 200px;">
+                        </div>
+
+                        <div class="faq-list p-0 mt-3 text-start">
                             <ul>
                                 <li class="border-bottom rounded-0">
                                     <i class="fa fa-question-circle icon-help" aria-hidden="true"></i>
@@ -761,7 +775,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-lg-4 mx-auto">
+                    <div class="col-lg-4 mx-auto d-lg-block d-none">
                         <img src="assets/images/Questions-pana.png" alt="" class="img-fluid">
                     </div>
                 </div>
