--- a/plan&pricing.html
+++ b/plan&pricing.html
@@ -252,13 +252,13 @@
 
     </header>
     <main>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-xl-7 col-lg-7  hero-text mx-auto text-center">
+                    <div class="col-xl-7 col-lg-10  hero-text mx-auto text-center">
 
                         <h2 class="services-title">
-                            Plans & Pricing Mergeasy All-In-One System
+                            Plans & Pricing Mergeasy <br> All-In-One System
                         </h2>
                         <p class="hero-text pe-lg-3 mt-2 mb-0 pb-0">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum quae nihil natus sit rerum. Eius, est tenetur. Ut voluptates laudantium nesciunt, eos recusandae laborum accusamus odio, nobis asperiores facere optio.
@@ -278,7 +278,7 @@
         </section>
         <section class="mt-3 pb-lg-5 pb-4 ">
             <div class="container">
-                <div class="row">
+                <div class="row justify-content-center">
                     <div class="col-lg-12 mb-3 text-center">
                         <span class="title">Pricing </span>
                         <!-- <h2 class="main-heading ">
@@ -288,7 +288,7 @@
                             Affordable Plans, Unlimited Users, No Hidden Fees
                         </p>
                     </div>
-                    <div class="col-lg-4 mb-3">
+                    <div class="col-lg-4 col-md-6  mb-3">
                         <div class="bg-white shadow px-4 pt-4 pb-2 price-card rounded-4">
                             <h3 class="">Starter Plan</h3>
                             <div class="d-flex align-items-center mt-2">
@@ -336,7 +336,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-3">
+                    <div class="col-lg-4 col-md-6  mb-3">
                         <div class="bg-dark shadow px-4 pt-4 pb-2 price-card rounded-4 h-100">
                             <h3 class="text-white">Professional Plan</h3>
                             <div class="d-flex align-items-center mt-2">
@@ -378,7 +378,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4 mb-3">
+                    <div class="col-lg-4 col-md-6  mb-3">
                         <div class="bg-white shadow px-4 pt-4 pb-2 price-card rounded-4 h-100 ">
                             <h3 class="">Enterprise Plan</h3>
                             <div class=" mt-2">
@@ -426,7 +426,7 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4">
+        <section class="py-5">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-7 col-lg-7  hero-text mx-auto text-center">
@@ -442,13 +442,13 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 ">
+        <section class="py-5 ">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 mt-lg-0 mt-3 mx-auto">
+                    <div class="col-md-6  mx-auto">
                             <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
                     </div>
-                    <div class="col-lg-5  hero-text  ms-auto">
+                    <div class="col-lg-5  hero-text  ms-auto mt-lg-0 mt-3 text-lg-start text-center">
                         <span class="title"> Versatile Cloud
                         </span>
                         <h2 class="main-heading text-black">
@@ -463,11 +463,11 @@
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 ">
+        <section class="py-5 ">
             <div class="container">
                 <div class="row align-items-center">
                    
-                    <div class="col-lg-5  hero-text  ">
+                    <div class="col-lg-5 mt-lg-0 mt-3  hero-text  order-lg-1 order-2 text-lg-start text-center">
                         <span class="title"> Versatile Cloud
                         </span>
                         <h2 class="main-heading text-black">
@@ -479,19 +479,19 @@
                        
                     </div>
 
-                    <div class="col-lg-6 mt-lg-0 mt-3 ms-auto">
+                    <div class="col-md-6 mx-auto order-lg-2 ">
                             <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
                     </div>
                 </div>
             </div>
         </section>
-        <section class="py-lg-5 py-4 ">
+        <section class="py-5 ">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-6 mt-lg-0 mt-3 mx-auto">
+                    <div class="col-md-6  mx-auto">
                             <img src="assets/images/salesforce-integration-content-img-4@2x-915x654.png.avif" alt="Choose deliery" class=" img-fluid">
                     </div>
-                    <div class="col-lg-5  hero-text  ms-auto">
+                    <div class="col-lg-5  hero-text  ms-auto mt-lg-0 mt-3  text-lg-start text-center">
                         <span class="title"> Versatile Cloud
                         </span>
                         <h2 class="main-heading text-black">
